stderr
JudgeMan.java:111: error: incompatible types: String cannot be converted to boolean
                    return "Full House";
                           ^
JudgeMan.java:113: error: incompatible types: String cannot be converted to boolean
                    return "Three Card";
                           ^
2 errors
